Bug 702960 - Valgrind error in clamp_poin_aux on txtwrite device
Summary: Valgrind error in clamp_poin_aux on txtwrite device
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Valgrind/AddressSanitizer (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-03 01:15 UTC by Peter Cherepanov
Modified: 2021-01-30 15:46 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Sample file (362.24 KB, application/pdf)
2020-10-03 01:15 UTC, Peter Cherepanov
Details
Log file (6.80 KB, text/plain)
2020-10-03 01:15 UTC, Peter Cherepanov
Details
Patch (1011 bytes, patch)
2020-10-04 07:06 UTC, Peter Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Cherepanov 2020-10-03 01:15:28 UTC
Created attachment 19911 [details]
Sample file

Valgrind reports an error in clamp_point_aux() on txtwrite device. Please see the log file for the used command line. 

The problem can be reproduced in the current master version and the commit df537046c2130be285b213b5d0478159d1c5b16d . This bug report is about the first error in the log. The rest are assumed to be duplicates or parts of the cascade.
Comment 1 Peter Cherepanov 2020-10-03 01:15:58 UTC
Created attachment 19912 [details]
Log file
Comment 3 Ray Johnston 2020-10-04 17:45:24 UTC
Assign to Chris to review the patch. He can decide if this warrants being in
a PACIFY_VALGRIND block (my guess is that it's not worth it).
Comment 4 Ken Sharp 2021-01-30 15:46:26 UTC
Fixed in commit 5bbb4c7e686ddfb28b27e0a790dabef6338ffa6d