txtwrite - fully initialise a structure

Bug #702960 "Valgrind error in clamp_poin_aux on txtwrite device"

Initialise all members of the structure to 0.